# prime-slam

./: .gitignore  CMakeLists.txt  DEPENDENCIES.md  Dockerfile  README.md
.github/workflows/: clang_format.yml  tests.yml
cmake/: CMakeRegistry.cmake  LibraryBuild.cmake  SetEnv.cmake  TestTarget.cmake  Uninstall.cmake.in
docs/: data_formats.md  modules.md  vocabulary.md
examples/: CMakeLists.txt  README.md  main.cpp
include/prime_slam/: metrics.h  pipelines.h  prime_slam.h  version.h.in
include/prime_slam/data/: dataset_factory.h  dataset_iterator.h  rgbd_dataset.h
include/prime_slam/data/datasets/: data_format.h  default_parameters.h  icl_nuim_dataset.h  icl_nuim_tum_format_dataset.h  rgbd_dataset_interface.h  (+2 more)
include/prime_slam/observation/: keyobject_concept.h  keypoint.h  observation.h  observation_batch.h  observation_creator.h  observation_creator_concept.h  opencv_keyline.h  opencv_keypoint.h
include/prime_slam/projection/: line_projector.h  point_projector.h  projector.h  projector_concept.h
include/prime_slam/sensor/: rgbd.h
include/prime_slam/slam/: data_association.h  slam.h
include/prime_slam/visualization/: visualize_map.h
src/prime_slam/: metrics.cpp
src/prime_slam/data/: dataset_factory.cpp
tests/: CMakeLists.txt  common.h  data_paths.h  test_dataset.cpp  test_frontend.cpp  test_keyframe_selection.cpp  test_mapping.cpp  test_observations_creation.cpp  test_point_backend_g2o.cpp  test_point_pose_estimation.cpp  test_point_projector.cpp  test_prime_slam.cpp  test_tracking.cpp
tests/data/lr_kt2_reduced/: groundtruth.txt
(+58 files in other folders)
